[gd_scene load_steps=33 format=3 uid="uid://qde0e5mwnany"]

[ext_resource type="Script" uid="uid://bxn5segpvyh4e" path="res://Scene/User Interfaces/UI Scripts/button_manager.gd" id="1_kxbd2"]
[ext_resource type="PackedScene" uid="uid://diw3xv0en0ynt" path="res://Scene/User Interfaces/UI Asset Components/background_i.tscn" id="1_nbfal"]
[ext_resource type="Texture2D" uid="uid://cdfpkjhi1gi77" path="res://Asset/User Interface/button_ui.png" id="2_eh1oq"]
[ext_resource type="FontFile" uid="uid://dtdw2k1jvjn37" path="res://Asset/Fonts/times.ttf" id="2_jykwv"]
[ext_resource type="Texture2D" uid="uid://dcm4yl4kcn7wn" path="res://Asset/Backgrounds/gem_1.webp" id="4_87orj"]
[ext_resource type="Texture2D" uid="uid://rjoebry8l2at" path="res://Asset/Backgrounds/gem_3.webp" id="5_qelcm"]
[ext_resource type="FontFile" uid="uid://d0sq1luf5fm1p" path="res://Asset/Fonts/Humanistic.ttf" id="7_qrawm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jykwv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qrawm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tce8e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r0e6h"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4mbs0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nbfal"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sxgnl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_80nln"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_87orj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yu5iq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t3k3t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8sg52"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eh1oq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4wod1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d8y1c"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cntet"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qelcm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mdbvn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e5jgt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_csd3b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lqnyc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xyor1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gbfi8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_okapm"]

[sub_resource type="LabelSettings" id="LabelSettings_bsri0"]
font = ExtResource("7_qrawm")
font_size = 32

[node name="MainMenu" type="Node2D"]

[node name="Background" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 651.0

[node name="Background I" parent="Background" instance=ExtResource("1_nbfal")]
layout_mode = 1

[node name="ButtonManager" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_kxbd2")

[node name="Start Battle" type="Button" parent="ButtonManager"]
layout_mode = 0
offset_left = 887.0
offset_top = 173.0
offset_right = 1080.0
offset_bottom = 262.0
theme_override_fonts/font = ExtResource("2_jykwv")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxEmpty_jykwv")
theme_override_styles/hover = SubResource("StyleBoxEmpty_qrawm")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_tce8e")
theme_override_styles/focus = SubResource("StyleBoxEmpty_r0e6h")
text = "Start/Battle
"
icon = ExtResource("2_eh1oq")
icon_alignment = 1
expand_icon = true

[node name="Cards" type="Button" parent="ButtonManager"]
layout_mode = 0
offset_left = 887.0
offset_top = 352.0
offset_right = 1085.0
offset_bottom = 439.0
theme_override_fonts/font = ExtResource("2_jykwv")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxEmpty_4mbs0")
theme_override_styles/hover = SubResource("StyleBoxEmpty_nbfal")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_sxgnl")
theme_override_styles/focus = SubResource("StyleBoxEmpty_80nln")
text = "Cards"
icon = ExtResource("2_eh1oq")
icon_alignment = 1
expand_icon = true

[node name="Characters" type="Button" parent="ButtonManager"]
layout_mode = 0
offset_left = 886.0
offset_top = 268.0
offset_right = 1083.0
offset_bottom = 349.0
theme_override_fonts/font = ExtResource("2_jykwv")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxEmpty_87orj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_yu5iq")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_t3k3t")
theme_override_styles/focus = SubResource("StyleBoxEmpty_8sg52")
text = "Characters"
icon = ExtResource("2_eh1oq")
icon_alignment = 1
expand_icon = true

[node name="Tutorial" type="Button" parent="ButtonManager"]
layout_mode = 0
offset_left = 386.0
offset_top = 551.0
offset_right = 588.0
offset_bottom = 631.0
theme_override_fonts/font = ExtResource("2_jykwv")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxEmpty_eh1oq")
theme_override_styles/hover = SubResource("StyleBoxEmpty_4wod1")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_d8y1c")
theme_override_styles/focus = SubResource("StyleBoxEmpty_cntet")
text = "Tutorial
"
icon = ExtResource("2_eh1oq")
icon_alignment = 1
expand_icon = true

[node name="Settings" type="Button" parent="ButtonManager"]
layout_mode = 0
offset_left = 190.0
offset_top = 555.0
offset_right = 387.0
offset_bottom = 629.0
theme_override_fonts/font = ExtResource("2_jykwv")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxEmpty_qelcm")
theme_override_styles/hover = SubResource("StyleBoxEmpty_mdbvn")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_e5jgt")
theme_override_styles/focus = SubResource("StyleBoxEmpty_csd3b")
text = "Settings"
icon = ExtResource("2_eh1oq")
icon_alignment = 1
expand_icon = true

[node name="Quit" type="Button" parent="ButtonManager"]
layout_mode = 0
offset_left = -27.0
offset_top = 555.0
offset_right = 228.0
offset_bottom = 628.0
theme_override_fonts/font = ExtResource("2_jykwv")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxEmpty_87orj")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_lqnyc")
theme_override_styles/hover = SubResource("StyleBoxEmpty_xyor1")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_gbfi8")
theme_override_styles/focus = SubResource("StyleBoxEmpty_okapm")
text = "Quit
"
icon = ExtResource("2_eh1oq")
icon_alignment = 1
expand_icon = true

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 154.0
offset_top = 14.0
offset_right = 481.0
offset_bottom = 94.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="SmallGemHolder" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/SmallGemHolder"]
custom_minimum_size = Vector2(60, 40)
layout_mode = 2
texture = ExtResource("4_87orj")
expand_mode = 1
stretch_mode = 5

[node name="SmallGemLabel" type="Label" parent="MarginContainer/HBoxContainer/SmallGemHolder"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.6539801, 0.044738613, 0.70056635, 1)
theme_override_font_sizes/font_size = 25
text = "0"

[node name="CrystalGemHolder" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/CrystalGemHolder"]
custom_minimum_size = Vector2(30, 40)
layout_mode = 2
texture = ExtResource("5_qelcm")
expand_mode = 1
stretch_mode = 5

[node name="CrystalLabel" type="Label" parent="MarginContainer/HBoxContainer/CrystalGemHolder"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.654902, 0.043137256, 0.7019608, 1)
theme_override_font_sizes/font_size = 25
text = "0"

[node name="Profile" type="MarginContainer" parent="."]
modulate = Color(0.37055278, 0.13907841, 0.21781474, 1)
offset_left = 43.0
offset_top = 38.0
offset_right = 117.0
offset_bottom = 82.0

[node name="PlayerNameLabel" type="Label" parent="Profile"]
layout_mode = 2
theme_override_colors/font_color = Color(0.45, 0, 0.09000012, 1)
theme_override_font_sizes/font_size = 30
text = "Name"
label_settings = SubResource("LabelSettings_bsri0")
horizontal_alignment = 1

[connection signal="pressed" from="ButtonManager/Start Battle" to="ButtonManager" method="_on_start_battle_pressed"]
[connection signal="pressed" from="ButtonManager/Cards" to="ButtonManager" method="_on_inventory_and_shop_pressed"]
[connection signal="pressed" from="ButtonManager/Characters" to="ButtonManager" method="_on_characters_pressed"]
[connection signal="pressed" from="ButtonManager/Tutorial" to="ButtonManager" method="_on_tutorial_pressed"]
[connection signal="pressed" from="ButtonManager/Settings" to="ButtonManager" method="_on_settings_pressed"]
[connection signal="pressed" from="ButtonManager/Quit" to="ButtonManager" method="_on_quit_pressed"]
